--- a/Vhista/Subscription/Base.lproj/Subscription.storyboard
+++ b/Vhista/Subscription/Base.lproj/Subscription.storyboard
@@ -10,16 +10,32 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="2re-7L-5Cp">
+            <objects>
+                <navigationController storyboardIdentifier="SubscriptionVC" id="f8L-8H-tAX" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" largeTitles="YES" id="Ut6-hQ-D0S">
+                        <rect key="frame" x="0.0" y="44" width="375" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="L5o-sw-IbF" kind="relationship" relationship="rootViewController" id="7t5-qr-h9v"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bxf-im-sBr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1214" y="-613"/>
+        </scene>
         <!--Upgrade Vhista-->
         <scene sceneID="4EM-C4-dpC">
             <objects>
-                <viewController storyboardIdentifier="SubscriptionVC" title="Upgrade Vhista" useStoryboardIdentifierAsRestorationIdentifier="YES" id="L5o-sw-IbF" customClass="SubscriptionViewController" customModule="Vhista" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Upgrade Vhista" id="L5o-sw-IbF" customClass="SubscriptionViewController" customModule="Vhista" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="KF4-gF-8BR">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="672"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="Ie5-nx-Hxa">
-                                <rect key="frame" x="16" y="136.33333333333334" width="343" height="141.00000000000003"/>
+                                <rect key="frame" x="16" y="92.333333333333343" width="343" height="141"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ejP-7k-dLL">
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="20.333333333333332"/>
@@ -33,7 +49,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="I7b-mR-p9w">
-                                        <rect key="frame" x="0.0" y="60.333333333333321" width="343" height="20.333333333333336"/>
+                                        <rect key="frame" x="0.0" y="60.33333333333335" width="343" height="20.333333333333336"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IgC-e8-ubH">
                                                 <rect key="frame" x="0.0" y="0.0" width="343" height="20.333333333333332"/>
@@ -57,7 +73,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Uph-El-aEc">
-                                <rect key="frame" x="16" y="297.33333333333331" width="343" height="148"/>
+                                <rect key="frame" x="16" y="253.33333333333331" width="343" height="148"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KtP-7s-OI3">
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="44"/>
@@ -122,7 +138,7 @@
                                 </subviews>
                             </stackView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="justified" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XHB-6r-Nxo">
-                                <rect key="frame" x="8" y="453.33333333333326" width="359" height="358.66666666666674"/>
+                                <rect key="frame" x="8" y="409.33333333333337" width="359" height="262.66666666666663"/>
                                 <color key="backgroundColor" white="0.070000000000000007" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">You can see our Terms of Use at: https://vhista.com/terms/ and our privacy policy in https://vhista.com/privacy/
 
@@ -147,7 +163,7 @@ Any unused portion of a free trial period, if offered, will be forfeited when th
                                 </userDefinedRuntimeAttributes>
                             </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You have reached the free deep image analysis limit. Subscribe to our monthly unlimited access!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bLb-Sv-t2C">
-                                <rect key="frame" x="16" y="51.999999999999993" width="343" height="64.333333333333314"/>
+                                <rect key="frame" x="16" y="8" width="343" height="64.333333333333329"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -171,6 +187,14 @@ Any unused portion of a free trial period, if offered, will be forfeited when th
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="3ye-UM-8oU"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Upgrade Vhista" id="Bl4-h3-ZMM">
+                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="CA9-Kx-g6b">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="dismissView:" destination="L5o-sw-IbF" id="RbU-oc-8rr"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="buyButton" destination="KtP-7s-OI3" id="Rpt-hs-VyG"/>
                         <outlet property="freeButton" destination="dcM-Sk-fk2" id="Tl1-R3-qcf"/>
@@ -188,17 +212,17 @@ Any unused portion of a free trial period, if offered, will be forfeited when th
         <!--Monthly Subscription-->
         <scene sceneID="Wez-f0-6rb">
             <objects>
-                <viewController storyboardIdentifier="SubscriptionInfoVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="kCi-zq-WJ8" customClass="SubscriptionInfoViewController" customModule="Vhista" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="kCi-zq-WJ8" customClass="SubscriptionInfoViewController" customModule="Vhista" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="bDD-d9-lLi"/>
                         <viewControllerLayoutGuide type="bottom" id="ruw-Vq-i47"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="p7h-dx-ayF">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="672"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="VmO-kN-oM9">
-                                <rect key="frame" x="16" y="64" width="343" height="141"/>
+                                <rect key="frame" x="16" y="20" width="343" height="141"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="rsY-tQ-cUv">
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="20.333333333333332"/>
@@ -212,7 +236,7 @@ Any unused portion of a free trial period, if offered, will be forfeited when th
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="9t6-sc-zdH">
-                                        <rect key="frame" x="0.0" y="60.333333333333336" width="343" height="20.333333333333336"/>
+                                        <rect key="frame" x="0.0" y="60.33333333333335" width="343" height="20.333333333333336"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hNA-Vq-7qh">
                                                 <rect key="frame" x="0.0" y="0.0" width="343" height="20.333333333333332"/>
@@ -223,7 +247,7 @@ Any unused portion of a free trial period, if offered, will be forfeited when th
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="fRK-qa-kyi">
-                                        <rect key="frame" x="0.0" y="120.66666666666664" width="343" height="20.333333333333329"/>
+                                        <rect key="frame" x="0.0" y="120.66666666666667" width="343" height="20.333333333333329"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LHz-Wk-FiR">
                                                 <rect key="frame" x="0.0" y="0.0" width="343" height="20.333333333333332"/>
@@ -236,7 +260,7 @@ Any unused portion of a free trial period, if offered, will be forfeited when th
                                 </subviews>
                             </stackView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" indicatorStyle="white" editable="NO" textAlignment="justified" adjustsFontForContentSizeCategory="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D7D-I4-sLN">
-                                <rect key="frame" x="8" y="225" width="359" height="587"/>
+                                <rect key="frame" x="8" y="181" width="359" height="491"/>
                                 <color key="backgroundColor" white="0.070000000000000007" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" staticText="YES"/>
@@ -276,7 +300,13 @@ Any unused portion of a free trial period, if offered, will be forfeited when th
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ehe-8n-bcf"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Monthly Subscription" largeTitleDisplayMode="always" id="bbm-5x-Bhz"/>
+                    <navigationItem key="navigationItem" title="Monthly Subscription" largeTitleDisplayMode="always" id="bbm-5x-Bhz">
+                        <barButtonItem key="rightBarButtonItem" title="Cancel" id="M4i-6T-yAV">
+                            <connections>
+                                <action selector="dismissView:" destination="kCi-zq-WJ8" id="a6w-ES-FvM"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="descriptionTextView" destination="D7D-I4-sLN" id="4dW-qb-3di"/>
                         <outlet property="lengthLabel" destination="hNA-Vq-7qh" id="2ZM-LY-IVY"/>
@@ -287,6 +317,23 @@ Any unused portion of a free trial period, if offered, will be forfeited when th
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jjx-em-zAH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-131" y="386"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Lsg-EJ-fgE">
+            <objects>
+                <navigationController storyboardIdentifier="SubscriptionInfoVC" id="WjS-Hh-f4x" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" largeTitles="YES" id="6DR-Bw-zj8">
+                        <rect key="frame" x="0.0" y="44" width="375" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="kCi-zq-WJ8" kind="relationship" relationship="rootViewController" id="jLd-vF-TlW"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QLk-dh-Niz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1215" y="386"/>
         </scene>
     </scenes>
 </document>
